# grobid-footnote-flavour

./: .env.dist  .gitignore  README.md  pyproject.toml
batches/batch_1/1_generated/10.19164__ijple.v6i1.1293/: 10.19164__ijple.v6i1.1293.training.figure  10.19164__ijple.v6i1.1293.training.figure.tei.xml  10.19164__ijple.v6i1.1293.training.fulltext  10.19164__ijple.v6i1.1293.training.fulltext.tei.xml  10.19164__ijple.v6i1.1293.training.header  10.19164__ijple.v6i1.1293.training.header.authors.tei.xml  10.19164__ijple.v6i1.1293.training.header.tei.xml  10.19164__ijple.v6i1.1293.training.references.authors.tei.xml  10.19164__ijple.v6i1.1293.training.references.referenceSegmenter.rawtxt  10.19164__ijple.v6i1.1293.training.segmentation.rawtxt  10.19164__ijple.v6i1.1293.training.table
batches/batch_2/1_generated/: 10.1093$1$gerhis$1$ghae045.grobid.training.segmentation.tei.xml  10.1093$1$gerhis$1$ghaf028.grobid.training.segmentation.tei.xml  10.12759$1$hsr.3.1978.1.3-10.grobid.training.segmentation.tei.xml  10.12775$1$clr.2013.008.grobid.training.segmentation.tei.xml  10.26321$1$s.marino.01.2025.06.grobid.training.segmentation.tei.xml  10.5771$1$2699-1284-2024-3-149.grobid.training.segmentation.tei.xml
data/: oa_law_review_samples_with_footnotes.csv
docs/: guidelines.md
docs/schema/: Grobid.rng  grobid.training.references.rng  grobid.training.segmentation.rng
notebooks/: grobid-training.ipynb
notebooks/.ipynb_checkpoints/: grobid-training-checkpoint.ipynb
scripts/: download-sample-pdfs.py  generate_training_api.sh  package_batch.sh  prepare_training_zip.sh
(+478 files in other folders)
